padding fixing, hamburger on tablet display

--- a/css/base.css
+++ b/css/base.css
@@ -68,6 +68,7 @@ body {
         padding-bottom: 40px;
         padding-left: 1rem;
         padding-right: 1rem;
+        padding-top: 100px;
     }
     
     .text {
